--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ timezone: Europe/Berlin
 
 # SEO
 # https://github.com/jekyll/jekyll-seo-tag
-title: REDAXO Community World Map
-description: A map filled with people being involved in REDAXO CMS. Hosted at GitHub, which allows for everyone to add their map entries. Join us!
+title: HŽI - Stalne točke geodetske osnove
+description: Karta stalnih točaka geodetske osnove uz mrežu Hrvatskih željeznica.
 
 # Assets
 # https://jekyllrb.com/docs/assets/
