--- a/_directory/data/M202-515/data.yml
+++ b/_directory/data/M202-515/data.yml
@@ -19,6 +19,7 @@ bio: "Bolcna u starom temelju stupa KM (u blizini novog stupa KM 10) na početku
 # provide image file from current folder (like 'johndoe.jpg') or gravatar url (generated via https://3v4l.org/OXG7H)
 # should be square and about 200-300 px size!
 image: 2020-01-29 09.28.09.jpg
+image: 2020-01-29 09.28.23.jpg
 
 # links
 # one or more links to your website, your github profile, twitter, facebook et al.
