--- a/_directory/data/M202-516/data.yml
+++ b/_directory/data/M202-516/data.yml
@@ -19,6 +19,7 @@ bio: "Bolcna na kraju perona u kolodvoru Gornje Dubrave."
 # provide image file from current folder (like 'johndoe.jpg') or gravatar url (generated via https://3v4l.org/OXG7H)
 # should be square and about 200-300 px size!
 image: 2020-01-29 09.41.17.jpg
+image2: bolcna2.jpg
 
 # links
 # one or more links to your website, your github profile, twitter, facebook et al.
