--- a/_directory/data/M202-515/data.yml
+++ b/_directory/data/M202-515/data.yml
@@ -1,36 +1,40 @@
 ---
-# name (required)
-# may be your real name or your nick; not your company name.
-# teams: feel free to add multiple entries for each of your members!
+# ime (obavezno)
+# može biti ime ili broj točke
 name: P1
 
-# geo location (required)
-# provide your favored level of detail by number of digits (like 50.107811 vs 50.11)
-# you may use services like openstreetmap.org to find out your geo location
+# koordinate (obavezno)
+# koordinate trebaju imati barem 4 decimale za što bolji prikaz
+# možete koristiti T7D za transformaciju HTRS96/TM koordinata iz ENH u DEG oblik (https://t7d.dgu.hr/)
 latitude: 45.2804060539238
 longitude: 15.3100338170332
 
-# bio
-# describe yourself, your involvement in the project and the community or whatever is relevant for you.
-# should be 300 chars at maximum. no markup or line breaks!
-bio: "Bolcna u starom temelju stupa KM (u blizini novog stupa KM 10) na početku kolodvora Gornje Dubrave."
+# koordinate HTRS96/TM (obavezno)
+E: 406643.0922
+N: 5016294.4643
+H: 245.6373
 
-# image or gravatar
-# provide image file from current folder (like 'johndoe.jpg') or gravatar url (generated via https://3v4l.org/OXG7H)
-# should be square and about 200-300 px size!
+# opis
+# opišite lokaciju i stabilizaciju stalne točke geodetske osnove
+# najviše 300 znakova. bez ukrašavanja teksta i praznih redaka!
+opis: "Bolcna u starom temelju stupa KM (u blizini novog stupa KM 10) na početku kolodvora Gornje Dubrave."
+
+# fotografija
+# fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
+# treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
 image: 2020-01-29 09.28.09.jpg
+
+# fotografija vrste stabilizacije
+# fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
+# treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
 image2: 2020-01-29 09.28.23.jpg
 
-# links
-# one or more links to your website, your github profile, twitter, facebook et al.
-# 4 links, tops!
+# linkovi
+# jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
+# najviše 4 linka!
 links:
 - 
 - 
 - 
 
 ---
-
-# Test
-
-Ovo je test
