--- a/_directory/.data.example.yml
+++ b/_directory/.data.example.yml
@@ -1,30 +1,39 @@
 ---
-# name (required)
-# may be your real name or your nick; not your company name.
-# teams: feel free to add multiple entries for each of your members!
-name: John Doe
+# ime (obavezno)
+# može biti ime ili broj točke
+name: P1
 
-# geo location (required)
-# provide your favored level of detail by number of digits (like 50.107811 vs 50.11)
-# you may use services like openstreetmap.org to find out your geo location
-latitude: 50.11
-longitude: 8.67
+# koordinate (obavezno)
+# koordinate trebaju imati barem 4 decimale za što bolji prikaz
+# možete koristiti T7D za transformaciju HTRS96/TM koordinata iz ENH u DEG oblik (https://t7d.dgu.hr/)
+latitude: 45.2804060539238
+longitude: 15.3100338170332
 
-# bio
-# describe yourself, your involvement in the project and the community or whatever is relevant for you.
-# should be 300 chars at maximum. no markup or line breaks!
-bio: "Hey, I’m John, englishman living in Frankfurt am Main working for YAKAMOTO. I was involved into several REDAXO addons like structure 4.0, the wordpress importer and twitteredaxo. Find me at slack and in the forum."
+# koordinate HTRS96/TM (obavezno)
+kooE: 406643.0922
+kooN: 5016294.4643
+kooH: 245.6373
 
-# image or gravatar
-# provide image file from current folder (like 'johndoe.jpg') or gravatar url (generated via https://3v4l.org/OXG7H)
-# should be square and about 200-300 px size!
-image: johndoe.jpg
+# opis
+# opišite lokaciju i stabilizaciju stalne točke geodetske osnove
+# najviše 300 znakova. bez ukrašavanja teksta i praznih redaka!
+opis: "Bolcna u starom temelju stupa KM (u blizini novog stupa KM 10) na početku kolodvora Gornje Dubrave."
 
-# links
-# one or more links to your website, your github profile, twitter, facebook et al.
-# 4 links, tops!
+# fotografija
+# fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
+# treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
+image: 2020-01-29 09.28.09.jpg
+
+# fotografija vrste stabilizacije
+# fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
+# treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
+image2: 2020-01-29 09.28.23.jpg
+
+# linkovi
+# jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
+# najviše 4 linka!
 links:
-- https://johndoe.me
+- https://www.hzinfra.hr
 - https://github.com/johndoe
 - https://twitter.com/johndoe
 
