--- a/_directory/data/M501-60880/data.yml
+++ b/_directory/data/M501-60880/data.yml
@@ -28,7 +28,7 @@ image: 20200811_104208.jpg
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: 
+image2: Cakovec.JPG
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
