--- a/_directory/data/M501-64950/data.yml
+++ b/_directory/data/M501-64950/data.yml
@@ -1,24 +1,24 @@
 ---
 # ime (obavezno)
 # može biti ime ili broj točke
-name: P76
+name: P130
 
 # koordinate (obavezno)
 # koordinate trebaju imati barem 4 decimale za što bolji prikaz
 # možete koristiti T7D za transformaciju HTRS96/TM koordinata iz ENH u DEG oblik (https://t7d.dgu.hr/)
-latitude: 46.3837767418
-longitude: 16.4459291120
+latitude: 46.3823667977
+longitude: 16.4737911656
 
 # koordinate HTRS96/TM (obavezno)
-kooE: 495840.959
-kooN: 5138232.202
-kooH: 162.81
-kooH1875: 162.977
+kooE: 497984.009
+kooN: 5138074.403
+kooH: 159.45
+kooH1875: 159.595
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
 # najviše 300 znakova. bez ukrašavanja teksta i praznih redaka!
-opis: "Tipla na kraju perona s lijeve strane pruge. Mjerenja izvršena RTK metodom uz pomoć CROPOS-a u HTRS96/TM koordinatnom sustavu. Visina HVRS1875 određena tehničkim nivelmanom u odnosu na nivelmansku mrežu I. nivelmana visoke točnosti (Nivelmanski vlak br. R5697)."
+opis: "Tirafon s desne strane na kraju mosta. Mjerenja izvršena RTK metodom uz pomoć CROPOS-a u HTRS96/TM koordinatnom sustavu. Visina HVRS1875 određena tehničkim nivelmanom u odnosu na nivelmansku mrežu I. nivelmana visoke točnosti (Nivelmanski vlak br. R5697)."
 
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
