--- a/_directory/data/M501-71793/data.yml
+++ b/_directory/data/M501-71793/data.yml
@@ -11,8 +11,8 @@ longitude: 16.5621128185
 
 # koordinate HTRS96/TM (obavezno)
 kooE: 504778.3821
-kooN: kooE: 5137252.1908
-kooH: kooE: 152.4410
+kooN: 5137252.1908
+kooH: 152.4410
 kooH1875: 
 
 # opis
