--- a/_directory/data/M501-62750/data.yml
+++ b/_directory/data/M501-62750/data.yml
@@ -18,7 +18,7 @@ kooH1875: 162.815
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
 # najviše 300 znakova. bez ukrašavanja teksta i praznih redaka!
-opis: "Reper ugrađen u zid kuće u Ul. dr. A. Starčevića br. 40 s lijeve strane pruge. Mjerenja izvršena RTK metodom uz pomoć CROPOS-a u HTRS96/TM koordinatnom sustavu. Visina HVRS1875 određena tehničkim nivelmanom u odnosu na nivelmansku mrežu I. nivelmana visoke točnosti (Nivelmanski vlak br. R5697)."
+opis: "Reper ugrađen u zid kuće u Ul. dr. A. Starčevića br. 40 s lijeve strane pruge. Reper nivelmanske mreže I. nivelmana visoke točnosti (Nivelmanski vlak br. R5697)."
 
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
