--- a/_directory/data/M501-62750/data.yml
+++ b/_directory/data/M501-62750/data.yml
@@ -28,7 +28,7 @@ image: IMG-20200912-WA0000.jpg
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: R5697.jpg
+image2: 20200918_122640.jpg
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
