--- a/_directory/data/M501-64950/data.yml
+++ b/_directory/data/M501-64950/data.yml
@@ -23,12 +23,12 @@ opis: "Tirafon s desne strane na kraju mosta. Mjerenja izvršena RTK metodom uz 
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image: 
+image: 20200918_114026.jpg
 
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: 
+image2: 20200918_114329.jpg
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
