Points renamed, added 3 new

--- a/_directory/data/M501-60880/data.yml
+++ b/_directory/data/M501-60880/data.yml
@@ -1,7 +1,7 @@
 ---
 # ime (obavezno)
 # može biti ime ili broj točke
-name: R5697
+name: R5697 (P60880)
 
 # koordinate (obavezno)
 # koordinate trebaju imati barem 4 decimale za što bolji prikaz
