--- a/_directory/data/M501-69515/data.yml
+++ b/_directory/data/M501-69515/data.yml
@@ -1,7 +1,7 @@
 ---
 # ime (obavezno)
 # može biti ime ili broj točke
-name: GP7
+name: P69515
 
 # koordinate (obavezno)
 # koordinate trebaju imati barem 4 decimale za što bolji prikaz
