Added missing heights

--- a/_directory/data/M501-71793/data.yml
+++ b/_directory/data/M501-71793/data.yml
@@ -13,7 +13,7 @@ longitude: 16.5621128185
 kooE: 504778.3821
 kooN: 5137252.1908
 kooH: 152.44
-kooH1875: 
+kooH1875: 152.590
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
