--- a/_directory/data/M501-73650/data.yml
+++ b/_directory/data/M501-73650/data.yml
@@ -13,7 +13,7 @@ longitude: 16.5860677449
 kooE: 506621.4975
 kooN: 5137027.3124
 kooH: 150.90
-kooH1875: 
+kooH1875: 151.032
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
