--- a/_directory/data/M501-74463/data.yml
+++ b/_directory/data/M501-74463/data.yml
@@ -13,7 +13,7 @@ longitude: 16.5965556535
 kooE: 507428.4898
 kooN: 5136929.6630
 kooH: 150.72
-kooH1875: 
+kooH1875: 150.903
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
