--- a/_directory/data/M501-75995/data.yml
+++ b/_directory/data/M501-75995/data.yml
@@ -13,7 +13,7 @@ longitude: 16.6163062216
 kooE: 508948.2806
 kooN: 5136737.8089
 kooH: 148.82
-kooH1875: 
+kooH1875: 148.991
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
