--- a/_directory/data/M501-77690/data.yml
+++ b/_directory/data/M501-77690/data.yml
@@ -13,7 +13,7 @@ longitude: 16.6381818
 kooE: 510631.689
 kooN: 5136533.382
 kooH: 145.97
-kooH1875: 
+kooH1875: 146.165
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
