--- a/_directory/data/M501-78222/data.yml
+++ b/_directory/data/M501-78222/data.yml
@@ -13,7 +13,7 @@ longitude: 16.64503137
 kooE: 511158.821
 kooN: 5136464.739
 kooH: 145.68
-kooH1875: 
+kooH1875: 145.874
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
