--- a/_directory/data/M501-78550/data.yml
+++ b/_directory/data/M501-78550/data.yml
@@ -13,7 +13,7 @@ longitude: 16.64928772
 kooE: 511486.355
 kooN: 5136440.340
 kooH: 145.58
-kooH1875: 
+kooH1875: 145.779
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
