--- a/_directory/data/M501-79543/data.yml
+++ b/_directory/data/M501-79543/data.yml
@@ -13,7 +13,7 @@ longitude: 16.6620644958
 kooE: 512469.688
 kooN: 5136308.453
 kooH: 143.84
-kooH1875: 
+kooH1875: 143.944
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
