--- a/_directory/data/M501-73805/data.yml
+++ b/_directory/data/M501-73805/data.yml
@@ -13,7 +13,7 @@ longitude: 16.5880493425
 kooE: 506773.9749
 kooN: 5137004.0544
 kooH: 151.13
-kooH1875: 
+kooH1875: 151.296
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
