--- a/_directory/data/M501-76920/data.yml
+++ b/_directory/data/M501-76920/data.yml
@@ -13,7 +13,7 @@ longitude: 16.62824984
 kooE: 509867.362
 kooN: 5136632.873
 kooH: 147.19
-kooH1875: 
+kooH1875: 147.385
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
