--- a/_directory/data/M501-78842/data.yml
+++ b/_directory/data/M501-78842/data.yml
@@ -13,7 +13,7 @@ longitude: 16.6530382405
 kooE: 511775.004
 kooN: 5136399.400
 kooH: 144.91
-kooH1875: 
+kooH1875: 145.098
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
