--- a/_directory/data/M501-53180/data.yml
+++ b/_directory/data/M501-53180/data.yml
@@ -28,7 +28,7 @@ image: 20210324_120237.jpg
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: 
+image2: 20210324_120237.jpg
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
