--- a/_directory/data/M202-505600/data.yml
+++ b/_directory/data/M202-505600/data.yml
@@ -10,10 +10,10 @@ latitude: 45.34338020395952
 longitude: 15.376734348949647
 
 # koordinate HTRS96/TM (obavezno)
-kooE: 
-kooN: 
-kooH: 
-kooH1875: 194.3709 (195.3409)
+kooE: 1000
+kooN: 1000
+kooH: 194
+kooH1875: 194.3709
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
