--- a/_directory/data/M202-505600/data.yml
+++ b/_directory/data/M202-505600/data.yml
@@ -13,7 +13,7 @@ longitude: 15.376734348949647
 kooE: 1000
 kooN: 1000
 kooH: 194
-kooH1875: 194.3709
+kooH1875: 194.3709 (195.3409)
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
