add height 1875 for some points

--- a/_directory/data/M202-505400/data.yml
+++ b/_directory/data/M202-505400/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3768577105276
 kooE: 411986.762
 kooN: 5023473.537
 kooH: 192.87
-kooH1875: 
+kooH1875: 192.990
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
