--- a/_directory/data/M202-505408/data.yml
+++ b/_directory/data/M202-505408/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3768257933934
 kooE: 411984.148
 kooN: 5023465.479
 kooH: 192.56
-kooH1875: 
+kooH1875: 192.680
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
