--- a/_directory/data/M202-505650/data.yml
+++ b/_directory/data/M202-505650/data.yml
@@ -13,7 +13,7 @@ longitude: 15.376481274089
 kooE: 411953.068
 kooN: 5023173.230
 kooH: 193.22
-kooH1875: 
+kooH1875: 193.331
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
