--- a/_directory/data/M202-506350/data.yml
+++ b/_directory/data/M202-506350/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3729023248528
 kooE: 411664.094
 kooN: 5022569.576
 kooH: 192.71
-kooH1875: 
+kooH1875: 192.862
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
