--- a/_directory/data/M202-506570/data.yml
+++ b/_directory/data/M202-506570/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3713011326556
 kooE: 411536.558
 kooN: 5022425.523
 kooH: 192.45
-kooH1875: 
+kooH1875: 192.587
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
