--- a/_directory/data/M202-506930/data.yml
+++ b/_directory/data/M202-506930/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3678734552661
 kooE: 411263.973
 kooN: 5022149.250
 kooH: 192.62
-kooH1875: 
+kooH1875: 192.751
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
