--- a/_directory/data/M202-507850/data.yml
+++ b/_directory/data/M202-507850/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3642096811294
 kooE: 410965.375
 kooN: 5021342.491
 kooH: 196.07
-kooH1875: 
+kooH1875: 196.212
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
