--- a/_directory/data/M202-508105/data.yml
+++ b/_directory/data/M202-508105/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3648250991334
 kooE: 411010.174
 kooN: 5021097.426
 kooH: 197.89
-kooH1875: 
+kooH1875: 197.993
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
