--- a/_directory/data/M202-508780/data.yml
+++ b/_directory/data/M202-508780/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3649220869132
 kooE: 411008.365
 kooN: 5020429.247
 kooH: 201.60
-kooH1875: 
+kooH1875: 201.729
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
