--- a/_directory/data/M202-509540/data.yml
+++ b/_directory/data/M202-509540/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3624720194755
 kooE: 410806.079
 kooN: 5019709.611
 kooH: 202.26
-kooH1875: 
+kooH1875: 202.395
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
