--- a/_directory/data/M202-509820/data.yml
+++ b/_directory/data/M202-509820/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3607080919538
 kooE: 410663.898
 kooN: 5019437.692
 kooH: 203.63
-kooH1875: 
+kooH1875: 203.729
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
