--- a/_directory/data/M202-506090/data.yml
+++ b/_directory/data/M202-506090/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3751035204398
 kooE: 411839.120
 kooN: 5022746.758
 kooH: 192.95
-kooH1875: 
+kooH1875: 193.080
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
