--- a/_directory/data/M202-506500/data.yml
+++ b/_directory/data/M202-506500/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3717300304929
 kooE: 411570.678
 kooN: 5022461.071
 kooH: 192.15
-kooH1875: 192.4616 (upitna visina)
+kooH1875: 192.280
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
