--- a/_directory/data/M202-507140/data.yml
+++ b/_directory/data/M202-507140/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3661074279828
 kooE: 411123.275
 kooN: 5021989.437
 kooH: 192.67
-kooH1875: 
+kooH1875: 192.822
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
