--- a/_directory/data/M202-507300/data.yml
+++ b/_directory/data/M202-507300/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3640776277165
 kooE: 410961.894
 kooN: 5021829.889
 kooH: 192.84
-kooH1875: 
+kooH1875: 192.965
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
