--- a/_directory/data/M202-509270/data.yml
+++ b/_directory/data/M202-509270/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3635631215609
 kooE: 410895.336
 kooN: 5019970.998
 kooH: 204.61
-kooH1875: 
+kooH1875: 204.753
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
