--- a/_directory/data/M202-510450/data.yml
+++ b/_directory/data/M202-510450/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3553718997873
 kooE: 410239.731
 kooN: 5019039.792
 kooH: 207.66
-kooH1875: 
+kooH1875: 207.773
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
