--- a/_directory/data/M202-510605/data.yml
+++ b/_directory/data/M202-510605/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3536027583635
 kooE: 410101.500
 kooN: 5019076.851
 kooH: 208.914
-kooH1875: 
+kooH1875: 209.052
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
