--- a/_directory/data/M202-510730/data.yml
+++ b/_directory/data/M202-510730/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3521887689669
 kooE: 409991.808
 kooN: 5019162.260
 kooH: 210.00
-kooH1875: 
+kooH1875: 210.171
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
