--- a/_directory/data/M202-515/data.yml
+++ b/_directory/data/M202-515/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3100338170332
 kooE: 406643.092
 kooN: 5016294.464
 kooH: 245.637
-kooH1875: 
+kooH1875: 245.779
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
