--- a/_directory/data/M202-517200/data.yml
+++ b/_directory/data/M202-517200/data.yml
@@ -12,8 +12,8 @@ longitude: 15.2996585648522
 # koordinate HTRS96/TM (obavezno)
 kooE: 405813.843
 kooN: 5015280.408
-kooH: 252.627
-kooH1875: 
+kooH: 252.63
+kooH1875: 252.763
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
