--- a/_directory/data/M202-517800/data.yml
+++ b/_directory/data/M202-517800/data.yml
@@ -12,8 +12,8 @@ longitude: 15.3040868650384
 # koordinate HTRS96/TM (obavezno)
 kooE: 406153.732
 kooN: 5014763.998
-kooH: 256.947
-kooH1875: 
+kooH: 256.95
+kooH1875: 257.071
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
