--- a/_directory/data/M202-519200/data.yml
+++ b/_directory/data/M202-519200/data.yml
@@ -12,8 +12,8 @@ longitude: 15.3161462589940
 # koordinate HTRS96/TM (obavezno)
 kooE: 407086.202
 kooN: 5013805.822
-kooH: 266.339
-kooH1875: 
+kooH: 266.34
+kooH1875: 266.450
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
