--- a/_directory/data/M202-519300/data.yml
+++ b/_directory/data/M202-519300/data.yml
@@ -12,8 +12,8 @@ longitude: 15.3172253385626
 # koordinate HTRS96/TM (obavezno)
 kooE: 407169.635
 kooN: 5013718.870
-kooH: 267.395
-kooH1875: 
+kooH: 267.40
+kooH1875: 267.513
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
