--- a/_directory/data/M202-520200/data.yml
+++ b/_directory/data/M202-520200/data.yml
@@ -12,8 +12,8 @@ longitude: 15.3203178245047
 # koordinate HTRS96/TM (obavezno)
 kooE: 407400.689
 kooN: 5012918.053
-kooH: 273.731
-kooH1875: 
+kooH: 273.73
+kooH1875: 273.847
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
