--- a/_directory/data/M202-511220/data.yml
+++ b/_directory/data/M202-511220/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3464974331719
 kooE: 409544.675
 kooN: 5019110.318
 kooH: 213.20
-kooH1875: 
+kooH1875: 213.321
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
