--- a/_directory/data/M202-511350/data.yml
+++ b/_directory/data/M202-511350/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3458055892975
 kooE: 409489.050
 kooN: 5019015.293
 kooH: 213.82
-kooH1875: 
+kooH1875: 213.930
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
