--- a/_directory/data/M202-511550/data.yml
+++ b/_directory/data/M202-511550/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3450680055242
 kooE: 409428.036
 kooN: 5018794.685
 kooH: 215.34
-kooH1875: 
+kooH1875: 215.503
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
