--- a/_directory/data/M202-511800/data.yml
+++ b/_directory/data/M202-511800/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3442944267512
 kooE: 409364.296
 kooN: 5018581.150
 kooH: 217.16
-kooH1875: 
+kooH1875: 217.274
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
