--- a/_directory/data/M202-511930/data.yml
+++ b/_directory/data/M202-511930/data.yml
@@ -13,7 +13,7 @@ longitude: 15.343524380577
 kooE: 409302.282
 kooN: 5018468.871
 kooH: 218.22
-kooH1875: 
+kooH1875: 218.308
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
