--- a/_directory/data/M202-512125/data.yml
+++ b/_directory/data/M202-512125/data.yml
@@ -13,7 +13,7 @@ longitude: 15.341509179204
 kooE: 409142.145
 kooN: 5018325.524
 kooH: 219.35
-kooH1875: 
+kooH1875: 219.515
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
