--- a/_directory/data/M202-512203/data.yml
+++ b/_directory/data/M202-512203/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3410309075575
 kooE: 409103.849
 kooN: 5018271.384
 kooH: 219.86
-kooH1875: 
+kooH1875: 219.943
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
