--- a/_directory/data/M202-512450/data.yml
+++ b/_directory/data/M202-512450/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3396714563638
 kooE: 408993.966
 kooN: 5018046.227
 kooH: 221.56
-kooH1875: 
+kooH1875: 221.787
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
