--- a/_directory/data/M202-512700/data.yml
+++ b/_directory/data/M202-512700/data.yml
@@ -13,7 +13,7 @@ longitude: 15.338274367931
 kooE: 408881.150
 kooN: 5017822.958
 kooH: 223.25
-kooH1875: 
+kooH1875: 223.427
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
