--- a/_directory/data/M202-513200/data.yml
+++ b/_directory/data/M202-513200/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3355833656602
 kooE: 408663.859
 kooN: 5017395.075
 kooH: 226.90
-kooH1875: 
+kooH1875: 227.036
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
