--- a/_directory/data/M202-513440/data.yml
+++ b/_directory/data/M202-513440/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3330834820892
 kooE: 408465.297
 kooN: 5017227.085
 kooH: 228.66
-kooH1875: 
+kooH1875: 228.867
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
