--- a/_directory/data/M202-513605/data.yml
+++ b/_directory/data/M202-513605/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3311738449665
 kooE: 408314.826
 kooN: 5017182.609
 kooH: 229.85
-kooH1875: 
+kooH1875: 230.074
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
