--- a/_directory/data/M202-513670/data.yml
+++ b/_directory/data/M202-513670/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3303950155846
 kooE: 408253.717
 kooN: 5017182.388
 kooH: 230.06
-kooH1875: 
+kooH1875: 230.299
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
