--- a/_directory/data/M202-514000/data.yml
+++ b/_directory/data/M202-514000/data.yml
@@ -13,7 +13,7 @@ longitude: 15.327170215479
 kooE: 408000.735
 kooN: 5017184.539
 kooH: 231.85
-kooH1875: 
+kooH1875: 232.030
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
