--- a/_directory/data/M202-514180/data.yml
+++ b/_directory/data/M202-514180/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3241518546636
 kooE: 407762.886
 kooN: 5017113.766
 kooH: 233.96
-kooH1875: 
+kooH1875: 234.134
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
