--- a/_directory/data/M202-514290/data.yml
+++ b/_directory/data/M202-514290/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3225348204369
 kooE: 407636.206
 kooN: 5017126.910
 kooH: 234.87
-kooH1875: 
+kooH1875: 235.008
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
