--- a/_directory/data/M202-514580/data.yml
+++ b/_directory/data/M202-514580/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3192797748807
 kooE: 407382.460
 kooN: 5017239.127
 kooH: 237.01
-kooH1875: 
+kooH1875: 237.225
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
