--- a/_directory/data/M202-514680/data.yml
+++ b/_directory/data/M202-514680/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3179418144978
 kooE: 407277.415
 kooN: 5017234.294
 kooH: 237.73
-kooH1875: 
+kooH1875: 237.871
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
