--- a/_directory/data/M202-514750/data.yml
+++ b/_directory/data/M202-514750/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3168782332067
 kooE: 407193.427
 kooN: 5017197.428
 kooH: 238.25
-kooH1875: 
+kooH1875: 238.434
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
