--- a/_directory/data/M202-514880/data.yml
+++ b/_directory/data/M202-514880/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3158786681931
 kooE: 407113.858
 kooN: 5017119.534
 kooH: 239.08
-kooH1875: 
+kooH1875: 239.280
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
