--- a/_directory/data/M202-515000/data.yml
+++ b/_directory/data/M202-515000/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3154384739044
 kooE: 407078.198
 kooN: 5017043.152
 kooH: 239.91
-kooH1875: 
+kooH1875: 239.963
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
