--- a/_directory/data/M202-515200/data.yml
+++ b/_directory/data/M202-515200/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3150982186329
 kooE: 407048.002
 kooN: 5016805.078
 kooH: 241.25
-kooH1875: 
+kooH1875: 241.468
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
