--- a/_directory/data/M202-515410/data.yml
+++ b/_directory/data/M202-515410/data.yml
@@ -13,7 +13,7 @@ longitude: 15.313920497568
 kooE: 406952.807
 kooN: 5016615.684
 kooH: 242.89
-kooH1875: 
+kooH1875: 243.057
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
