--- a/_directory/data/M202-515610/data.yml
+++ b/_directory/data/M202-515610/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3126591571475
 kooE: 406851.193
 kooN: 5016436.340
 kooH: 244.54
-kooH1875: 
+kooH1875: 244.766
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
