--- a/_directory/data/M202-509270/data.yml
+++ b/_directory/data/M202-509270/data.yml
@@ -13,12 +13,12 @@ longitude: 15.3635631215609
 kooE: 410895.336
 kooN: 5019970.998
 kooH: 204.61
-kooH1875: 204.753
+kooH1875: 204.768
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
 # najviše 300 znakova. bez ukrašavanja teksta i praznih redaka!
-opis: "Kolac s lijeve strane pruge u blizini stupa KM-a br. . Mjerenja izvršena RTK metodom uz pomoć CROPOS-a u HTRS96/TM koordinatnom sustavu. Visina HVRS1875 određena tehničkim nivelmanom u odnosu na nivelmansku mrežu I. nivelmana visoke točnosti (Nivelmanski vlak br. 273)."
+opis: "Kolac s lijeve strane pruge u blizini stupa KM-a br. 63. Mjerenja izvršena RTK metodom uz pomoć CROPOS-a u HTRS96/TM koordinatnom sustavu. Visina HVRS1875 određena tehničkim nivelmanom u odnosu na nivelmansku mrežu I. nivelmana visoke točnosti (Nivelmanski vlak br. 273)."
 
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
