--- a/_directory/data/M202-510985/data.yml
+++ b/_directory/data/M202-510985/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3491743783017
 kooE: 409756.290
 kooN: 5019225.987
 kooH: 211.62
-kooH1875: 
+kooH1875: 211.753
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
