--- a/_directory/data/M202-511105/data.yml
+++ b/_directory/data/M202-511105/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3477501266439
 kooE: 409644.144
 kooN: 5019195.319
 kooH: 213.12
-kooH1875: 
+kooH1875: 213.245
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
