--- a/_directory/data/M202-512970/data.yml
+++ b/_directory/data/M202-512970/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3368773292372
 kooE: 408768.331
 kooN: 5017599.745
 kooH: 225.04
-kooH1875: 
+kooH1875: 225.174
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
