--- a/_directory/data/M202-513305/data.yml
+++ b/_directory/data/M202-513305/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3346309410089
 kooE: 408587.779
 kooN: 5017301.219
 kooH: 227.69
-kooH1875: 
+kooH1875: 227.851
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
