--- a/_directory/data/M202-514420/data.yml
+++ b/_directory/data/M202-514420/data.yml
@@ -13,7 +13,7 @@ longitude: 15.3210400152819
 kooE: 407519.806
 kooN: 5017187.203
 kooH: 236.00
-kooH1875: 
+kooH1875: 236.219
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
